<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>edu.whimc</groupId>
    <artifactId>WHIMC-QRF-Agent</artifactId>
    <version>3.3.16</version>
    <name>WHIMC QRF Agent</name>
    <description>Defines overworld agent traits</description>

    <repositories>
        <!-- This adds the Spigot Maven repository to the build -->
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>playpro-repo</id>
            <url>https://maven.playpro.com</url>
        </repository>
        <!-- Maven repo for Holographic Displays -->
        <repository>
            <id>codemc-repo</id>
            <url>https://repo.codemc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>citizens-repo</id>
            <url>https://maven.citizensnpcs.co/repo</url>
        </repository>
        <!-- Maven repo for ProtocolLib -->
        <repository>
            <id>dmulloy2-repo</id>
            <url>https://repo.dmulloy2.net/repository/public/</url>
        </repository>
        <!-- Maven repo for Quests -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <!--Maven repo for world guard -->
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>sk89q-repo</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>
        <repository>
            <id>sonatype-snapshots</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
        </repository>
    </repositories>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.intellectualsites.bom</groupId>
                <artifactId>bom-newest</artifactId>
                <version>1.38</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <!-- Paper API (Java 21+, modern server versions) -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.1-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.coreprotect</groupId>
            <artifactId>coreprotect</artifactId>
            <version>23.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.pmml4s</groupId>
            <artifactId>pmml4s_2.13</artifactId>
            <version>0.9.14</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.17.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.11.0</version>
        </dependency>
        <!-- Add HolographicDisplays to the build -->
        <dependency>
            <groupId>com.gmail.filoghost.holographicdisplays</groupId>
            <artifactId>holographicdisplays-api</artifactId>
            <version>2.4.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.citizensnpcs</groupId>
            <artifactId>citizens-main</artifactId>
            <version>2.0.41-SNAPSHOT</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <!-- Add ProtocolLib to the build-->
        <dependency>
            <groupId>net.dmulloy2</groupId>
            <artifactId>ProtocolLib</artifactId>
            <version>5.4.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <artifactId>edu.whimc</artifactId>
            <groupId>WHIMC-ScienceTools</groupId>
            <scope>system</scope>
            <version>2.4.11</version>
            <systemPath>${pom.basedir}/lib/WHIMC-ScienceTools-2.4.11.jar</systemPath>
        </dependency>
        <dependency>
            <artifactId>edu.whimc</artifactId>
            <groupId>WHIMC-Observations</groupId>
            <scope>system</scope>
            <version>2.7.0</version>
            <systemPath>${pom.basedir}/lib/WHIMC-Observations-2.7.0.jar</systemPath>
        </dependency>
        <dependency>
            <artifactId>edu.whimc</artifactId>
            <groupId>SpeechReceiver</groupId>
            <scope>system</scope>
            <version>3</version>
            <systemPath>${pom.basedir}/lib/SpeechReceiverv3.jar</systemPath>
        </dependency>
        <!-- Add Quests to the build -->
        <dependency>
            <groupId>com.github.PikaMug.Quests</groupId>
            <artifactId>quests-main</artifactId>
            <version>4.0.8</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.fastasyncworldedit</groupId>
            <artifactId>FastAsyncWorldEdit-Core</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.fastasyncworldedit</groupId>
            <artifactId>FastAsyncWorldEdit-Bukkit</artifactId>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <artifactId>FastAsyncWorldEdit-Core</artifactId>
                    <groupId>*</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>5.2.5</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-scratchpad</artifactId>
            <version>5.2.5</version>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-bukkit</artifactId>
            <version>7.0.9</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <build>
        <finalName>${project.artifactId}-${project.version}</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <minimizeJar>false</minimizeJar>
                    <relocations>
                        <relocation>
                            <pattern>com.comphenix.packetwrapper</pattern>
                            <shadedPattern>net.novucs.dlac.shaded.packetwrapper</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>